--- a/src/components/text/_text.scss
+++ b/src/components/text/_text.scss
@@ -141,6 +141,7 @@
       content: "";
       height: 2px;
       width: 50%;
+      right: 0;
       transform: translateX(-50%);
       background: $euiColorDarkShade;
     }
